lib_LTLIBRARIES = libargp++.la
libargp___la_SOURCES = argpp.cpp argppbaseimpl.cpp
libargp___la_CXXFLAGS = $(CXXFLAGS) -I$(top_srcdir)/include
libargp___la_LDFLAGS = -version-info 9:0:9
libargp___includedir = $(includedir)
include_HEADERS = $(top_srcdir)/include/argpp.hpp
noinst_HEADERS  = $(top_srcdir)/include/argppbaseimpl.hpp
